logs/lovelace.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lovelace'...
Listing './lib/python3.5/site-packages/lovelace/services'...
Listing './lib/python3.5/site-packages/lovelace/services/data_access'...
Compiling './lib/python3.5/site-packages/lovelace/services/data_access/utils.py'...
***   File "./lib/python3.5/site-packages/lovelace/services/data_access/utils.py", line 17
    kwargs = {key: join_str(f'"{value}"' for value in values)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lovelace/services/parser'...
Compiling './lib/python3.5/site-packages/lovelace/services/parser/service.py'...
***   File "./lib/python3.5/site-packages/lovelace/services/parser/service.py", line 17
    section_title = f'== {section_name} =='
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lovelace-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/data_access_tests'...
Listing './lib/python3.5/site-packages/tests/fixtures'...
Listing './lib/python3.5/site-packages/tests/strategies'...
Compiling './lib/python3.5/site-packages/tests/strategies/page_meta.py'...
***   File "./lib/python3.5/site-packages/tests/strategies/page_meta.py", line 5
    MIN_PAGE_ID = 1_000
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
